[package]
authors = ["Fuel Labs <contact@fuel.sh>"]
edition = "2021"
license = "Apache-2.0"
name = "tests"
version = "0.1.0"

[dependencies]
fuel-gql-client = { version = "0.3.2", default-features = false }
fuel-tx = "0.5.0"
# fuels-abigen-macro = "0.4.0"
# fuels-contract = "0.4.0"
# fuels-core ="0.4.0"
fuels-abigen-macro = { path = "../../fuels-rs/fuels-abigen-macro" }
fuels-contract = { path = "../../fuels-rs/fuels-contract" }
fuels-core = { path = "../../fuels-rs/fuels-core" }
fuel-core = "0.3.2"
fuel-types = "0.2.0"
rand = "0.8"
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "integration_tests"
path = "test_projects/harness.rs"
